added runlength to ticket

--- a/squll.conf
+++ b/squll.conf
@@ -37,7 +37,7 @@ bailout = 0
 # All experiments are ran a number of times, because the first
 # run typically warms up the database engine.
 # It is a parameter that can be overloaded within a request
-repeat = 5
+runlength = 5
 
 # TASK SPECIFICATION
 # The sections are specific to the platform on which it runs.
