Cleanup and moving code around

--- a/squll.conf
+++ b/squll.conf
@@ -12,8 +12,8 @@ server = localhost:5000
 # server = http://scalpel-14242567.eu-west-1.elb.amazonaws.com/
 
 # The prime purpose of squll.py is to run database experiments on behalf of registered SQALPEL users.
-# It can retrieve tasks by providing a project specific task key.
-# The global key is used for debugging.
+# It can retrieve tasks by providing a task key.
+# The global key is used for debugging only.
 ticket=aBcDeFgH
 
 # SQALPEL differentiates the platforms on which experiments are ran with a host nickname.
@@ -21,7 +21,7 @@ ticket=aBcDeFgH
 
 # Long running experiments can be costly, espcially in a Cloud setting.
 # Therefore, when the DBMS has an option to timeout a query, it can use this
-# global time out property (in seconds)
+# global time out property (in seconds). Just killing the thread may not be sufficient.
 timeout = 60
 
 # For debugging purposes of sqalpel.py one can turn on this flag
@@ -33,11 +33,6 @@ forever= true
 # After too many database errors it bails out to assess the experimental setup.
 # A value 0 means never to bail out, otherwise it is the number of errors allowed
 bailout = 0
-
-# All experiments are ran a number of times, because the first
-# run typically warms up the database engine.
-# It is a parameter that can be overloaded within a request
-runlength = 5
 
 # TASK SPECIFICATION
 # The sections are specific to the platform on which it runs.
