revamp the interface with Sqalpel

--- a/squll.conf
+++ b/squll.conf
@@ -1,7 +1,7 @@
 # (c) 2019- SQALPEL
 # author: Martin Kersten
-# A sample squll.py configuration file
-# This file should live within the directory from which you start the program
+# The prime purpose of squll.py is to run database experiments on behalf of registered SQALPEL users.
+# This sample squll.py configuration file should live within the directory from which you start the program
 # or designated with a path on the command line.
 
 [DEFAULT]
@@ -9,10 +9,9 @@
 
 # The main property is the IP adress to reach a SQALPEL web server
 server = localhost:5000
-# server = http://scalpel-14242567.eu-west-1.elb.amazonaws.com/
 
-# The prime purpose of squll.py is to run database experiments on behalf of registered SQALPEL users.
-# It can retrieve tasks by providing a task key.
+# Squll.py retrieves tasks by providing a task key, which enables ease
+# of result management within the Sqalpel website.
 # The global key is used for debugging only.
 ticket=aBcDeFgH
 
@@ -21,7 +20,7 @@ ticket=aBcDeFgH
 
 # Long running experiments can be costly, espcially in a Cloud setting.
 # Therefore, when the DBMS has an option to timeout a query, it can use this
-# global time out property (in seconds). Just killing the thread may not be sufficient.
+# global time out property (in seconds). Just stopping the connection thread may not be sufficient.
 timeout = 60
 
 # For debugging purposes of sqalpel.py one can turn on this flag
