Move to a YAML configuration style

--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,9 @@ configparser = "*"
 mysql-connector = "*"
 fdb = "*"
 jaydebeapi = "*"
+pyyaml = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
